Ajustes migration e adicionado metodo put
